<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/nav_location"
            android:title="@string/location"
            android:icon="@drawable/ic_location"
            android:checked="true"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/nav_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite"
            android:checked="true"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_person"
            android:checked="true"
            app:showAsAction="ifRoom"/>

</menu>