<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_16sdp">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_16sdp">
        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/foreground">
            <ImageView
                    android:id="@+id/img_food"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_125sdp"
                    android:scaleType="centerCrop"/>
        </FrameLayout>
        <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/food_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/address"
                android:textSize="16sp"/>
        <TextView
                android:id="@+id/tv_kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/kind"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>