<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.HomeFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:src="@drawable/ic_arrow_back" />

        <TextView
                android:id="@+id/tv_top_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_toEndOf="@+id/iv_back"
                android:gravity="center"
                android:text="@string/lable_store"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/iv_back"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/lable_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.synnapps.carouselview.CarouselView
                android:id="@+id/is_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_175sdp"
                android:layout_below="@+id/tf_layout"
                android:layout_marginTop="@dimen/_16sdp"
                app:fillColor="@android:color/white"
                app:pageColor="@android:color/transparent"
                app:radius="@dimen/_4sdp"
                app:slideInterval="3000"
                app:strokeColor="@color/strokeColor"
                app:strokeWidth="@dimen/_1sdp" />

        <TextView
                android:id="@+id/tv_most"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/is_main"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/most"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/is_main"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/see"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_see"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp" />

        <TextView
                android:id="@+id/tv_seafood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_food"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/seafood"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_see_seafood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_food"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/see"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_seafood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_seafood"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp" />

    </RelativeLayout>

</ScrollView>